--- a/src/roomease/LoginPage.form
+++ b/src/roomease/LoginPage.form
@@ -187,6 +187,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="passwordField">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passwordFieldActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="passwordFieldKeyPressed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="passwordFieldKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="loginButton">
               <Properties>
