--- a/src/roomease/LoginPage.form
+++ b/src/roomease/LoginPage.form
@@ -36,7 +36,7 @@
     <Container class="javax.swing.JPanel" name="background">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cd" green="e9" red="f4" type="rgb"/>
+          <Color blue="75" green="63" red="8" type="rgb"/>
         </Property>
       </Properties>
 
@@ -70,13 +70,13 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e5" green="b7" red="9e" type="rgb"/>
+              <Color blue="94" green="95" red="b4" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="SansSerif" size="36" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e5" green="8d" red="64" type="rgb"/>
+              <Color blue="94" green="95" red="b4" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="ROOMEASE"/>
@@ -85,7 +85,7 @@
         <Container class="javax.swing.JPanel" name="loginBox">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="62" green="70" red="6a" type="rgb"/>
+              <Color blue="e5" green="df" red="d5" type="rgb"/>
             </Property>
           </Properties>
 
